--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#867B7B"
+    android:background="#3e394c"
     tools:context=".DashBoardActivity">
 
     <RelativeLayout
-        android:background="#D47777"
+        android:background="@null"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp">
 
@@ -20,16 +20,17 @@
             android:background="@drawable/ic_baseline_arrow_back_ios_24"
             android:layout_centerVertical="true"
             android:layout_marginStart="@dimen/_10sdp"/>
+
         <TextView
+            android:id="@+id/idExit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/_10sdp"
             android:text="Exit"
             android:textSize="@dimen/_15sdp"
-            android:layout_marginRight="@dimen/_10sdp"
-            android:layout_centerVertical="true"
-            android:textStyle="bold"
-            android:layout_alignParentRight="true"
-            android:id="@+id/idExit"/>
+            android:textStyle="bold" />
 
     </RelativeLayout>
 <ProgressBar
@@ -45,10 +46,11 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/idCardQues"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_100sdp"
+        android:layout_height="@dimen/_150sdp"
+        app:cardUseCompatPadding="true"
         android:layout_margin="@dimen/_14sdp"
-        app:cardCornerRadius="@dimen/_14sdp"
-
+        app:cardCornerRadius="10dp"
+        app:cardElevation="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_20sdp" >
         <TextView
             android:layout_width="wrap_content"
@@ -57,109 +59,129 @@
             android:id="@+id/idquestion"
             android:text="Question"
             android:gravity="center"
+            android:textSize="@dimen/_12sdp"
             android:layout_gravity="center"/>
     </androidx.cardview.widget.CardView>
-    <androidx.cardview.widget.CardView
-        android:id="@+id/idCardA"
-        android:onClick="option_A_Click"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_50sdp"
-        android:layout_marginLeft="@dimen/_25sdp"
-        android:layout_marginRight="@dimen/_25sdp"
-        android:layout_marginStart="@dimen/_25sdp"
-        android:layout_marginEnd="@dimen/_25sdp"
-        app:cardCornerRadius="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_25sdp" >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/idOptionA"
-            android:textColor="@color/black"
-            android:text="OptionA"
-            android:layout_gravity="center"/>
-    </androidx.cardview.widget.CardView>
-    <androidx.cardview.widget.CardView
-        android:id="@+id/idCardB"
-        android:onClick="option_B_Click"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_50sdp"
-        android:layout_marginLeft="@dimen/_25sdp"
-        android:layout_marginRight="@dimen/_25sdp"
-        android:layout_marginStart="@dimen/_25sdp"
-        android:layout_marginEnd="@dimen/_25sdp"
-        app:cardCornerRadius="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_20sdp" >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/idOptionB"
-            android:textColor="@color/black"
-            android:text="OptionB"
-            android:layout_gravity="center"/>
-    </androidx.cardview.widget.CardView>
-    <androidx.cardview.widget.CardView
-        android:id="@+id/idCardC"
-        android:onClick="option_C_Click"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_50sdp"
-        android:layout_marginLeft="@dimen/_25sdp"
-        android:layout_marginRight="@dimen/_25sdp"
-        android:layout_marginStart="@dimen/_25sdp"
-        android:layout_marginEnd="@dimen/_25sdp"
-        app:cardCornerRadius="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_20sdp" >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/idOptionC"
-            android:textColor="@color/black"
-            android:text="OptionC"
-            android:layout_gravity="center"/>
-    </androidx.cardview.widget.CardView>
-    <androidx.cardview.widget.CardView
-        android:id="@+id/idCardD"
-        android:onClick="option_D_Click"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_50sdp"
-        android:layout_marginLeft="@dimen/_25sdp"
-        android:layout_marginRight="@dimen/_25sdp"
-        android:layout_marginStart="@dimen/_25sdp"
-        android:layout_marginEnd="@dimen/_25sdp"
-        app:cardCornerRadius="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_20sdp" >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/idOptionD"
-            android:textColor="@color/black"
-            android:text="OptionD"
-            android:layout_gravity="center"/>
-    </androidx.cardview.widget.CardView>
-
 
     <LinearLayout
-        android:id="@+id/idNextBtn"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_50sdp"
-        android:layout_marginTop="@dimen/_25sdp"
-        android:background="@drawable/nextbtn"
-        android:layout_marginEnd="@dimen/_70sdp"
-        android:layout_marginStart="@dimen/_70sdp"
-        android:layout_marginRight="@dimen/_50sdp"
-        android:layout_marginLeft="@dimen/_50sdp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/options_bg">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="NEXT"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            android:textColor="@color/teal_700"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:textSize="@dimen/_25sdp"/>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/idCardA"
+            android:onClick="option_A_Click"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_marginLeft="@dimen/_25sdp"
+            android:layout_marginRight="@dimen/_25sdp"
+            android:layout_marginStart="@dimen/_25sdp"
+            android:layout_marginEnd="@dimen/_25sdp"
+            app:cardCornerRadius="@dimen/_10sdp"
+            app:cardUseCompatPadding="true"
 
+            android:layout_marginTop="@dimen/_25sdp" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/idOptionA"
+                android:textColor="@color/black"
+                android:text="OptionA"
+                android:layout_gravity="center"/>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/idCardB"
+            android:onClick="option_B_Click"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_marginLeft="@dimen/_25sdp"
+            android:layout_marginRight="@dimen/_25sdp"
+            android:layout_marginStart="@dimen/_25sdp"
+            android:layout_marginEnd="@dimen/_25sdp"
+            app:cardCornerRadius="@dimen/_10sdp"
+            app:cardUseCompatPadding="true"
+
+            android:layout_marginTop="@dimen/_20sdp" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/idOptionB"
+                android:textColor="@color/black"
+                android:text="OptionB"
+                android:layout_gravity="center"/>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/idCardC"
+            android:onClick="option_C_Click"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_marginLeft="@dimen/_25sdp"
+            android:layout_marginRight="@dimen/_25sdp"
+            android:layout_marginStart="@dimen/_25sdp"
+            android:layout_marginEnd="@dimen/_25sdp"
+            app:cardCornerRadius="@dimen/_10sdp"
+            app:cardUseCompatPadding="true"
+
+            android:layout_marginTop="@dimen/_20sdp" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/idOptionC"
+                android:textColor="@color/black"
+                android:text="OptionC"
+                android:layout_gravity="center"/>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/idCardD"
+            android:onClick="option_D_Click"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_marginLeft="@dimen/_25sdp"
+            android:layout_marginRight="@dimen/_25sdp"
+            android:layout_marginStart="@dimen/_25sdp"
+            android:layout_marginEnd="@dimen/_25sdp"
+            app:cardCornerRadius="@dimen/_10sdp"
+            app:cardUseCompatPadding="true"
+
+            android:layout_marginTop="@dimen/_20sdp" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/idOptionD"
+                android:textColor="@color/black"
+                android:text="OptionD"
+                android:layout_gravity="center"/>
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:id="@+id/idNextBtn"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:background="@drawable/nextbtn"
+            android:layout_marginEnd="@dimen/_70sdp"
+            android:layout_marginStart="@dimen/_70sdp"
+            android:layout_marginRight="@dimen/_50sdp"
+            android:layout_marginLeft="@dimen/_50sdp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="NEXT"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/teal_700"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:textSize="@dimen/_25sdp"/>
+
+        </LinearLayout>
     </LinearLayout>
+
+
+
+
 
 
 
