--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,10 @@
       android:layout_centerInParent="true">
 
       <ImageView
-          android:layout_width="@dimen/_100sdp"
-          android:layout_height="@dimen/_100sdp"
+          android:layout_width="@dimen/_120sdp"
+          android:layout_height="@dimen/_120sdp"
           android:foregroundGravity="center"
-          android:background="@drawable/logo"
+          android:background="@drawable/lightbulb"
           android:layout_centerInParent="true"/>
       <TextView
           android:layout_width="match_parent"
