--- a/app/src/main/res/layout/activity_won.xml
+++ b/app/src/main/res/layout/activity_won.xml
@@ -10,27 +10,28 @@
 
     <RelativeLayout
         android:id="@+id/idtoolBar"
-        android:background="#D47777"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp">
+        android:layout_height="@dimen/_40sdp"
+        android:background="@null">
 
         <ImageView
             android:id="@+id/idBack"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
-            android:background="@drawable/ic_baseline_arrow_back_ios_24"
             android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/_10sdp"/>
+            android:layout_marginStart="@dimen/_10sdp"
+            android:background="@drawable/ic_baseline_arrow_back_ios_24" />
+
         <TextView
+            android:id="@+id/idExit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/_10sdp"
             android:text="Exit"
             android:textSize="@dimen/_15sdp"
-            android:layout_marginRight="@dimen/_10sdp"
-            android:layout_centerVertical="true"
-            android:textStyle="bold"
-            android:layout_alignParentRight="true"
-            android:id="@+id/idExit"/>
+            android:textStyle="bold" />
 
     </RelativeLayout>
     <RelativeLayout
@@ -49,7 +50,6 @@
             app:cpb_background_progressbar_width="5dp"
             app:cpb_progress_direction="to_right"
             app:cpb_progressbar_color="@color/green2"
-            app:cpb_progress_max="20"
             app:cpb_progress="13"
             app:cpb_progressbar_width="@dimen/_10sdp"
             app:cpb_round_border="false" />
@@ -94,18 +94,6 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_below="@id/idRelative3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <ImageView
-            android:layout_width="288dp"
-            android:layout_height="233dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="4dp"
-            android:background="@drawable/boy" />
-    </RelativeLayout>
 
 </RelativeLayout>
